// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mwe renders correctly 1`] = `
<div>
  <h1>
    Minimal Working Example
  </h1>
  <svg
    height={500}
    style={
      Object {
        "borderColor": "lightgrey",
        "borderStyle": "solid",
        "borderWidth": 1,
      }
    }
    width={500}
  >
    <g
      transform="translate(10, 10)"
    >
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,192.13213213213214L0,19.45945945945946L27.670528123744116,19.45945945945946"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,192.13213213213214L0,168.76126126126127L64.9499124293001,168.76126126126127"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,192.13213213213214L0,388.1756756756757L86.1253033454145,388.1756756756757"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M27.670528123744116,19.45945945945946L27.670528123744116,6.486486486486487L95.09337449550596,6.486486486486487"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M27.670528123744116,19.45945945945946L27.670528123744116,32.432432432432435L99.75285963960134,32.432432432432435"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M64.9499124293001,168.76126126126127L64.9499124293001,61.62162162162162L84.73630326298822,61.62162162162162"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M64.9499124293001,168.76126126126127L64.9499124293001,275.90090090090087L125.30018524138532,275.90090090090087"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M86.1253033454145,388.1756756756757L86.1253033454145,363.2432432432433L249.05197694826268,363.2432432432433"
        />
        <line
          className="branch-tracer"
          x1={249.05197694826268}
          x2={390.986328125}
          y1={363.2432432432433}
          y2={363.2432432432433}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={363.2432432432433}
        >
          COELACANTH
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M86.1253033454145,388.1756756756757L86.1253033454145,413.1081081081081L119.6186552699309,413.1081081081081"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M95.09337449550596,6.486486486486487L95.09337449550596,0L138.96335692230105,0"
        />
        <line
          className="branch-tracer"
          x1={138.96335692230105}
          x2={441.39453125}
          y1={0}
          y2={0}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={0}
        >
          EELA
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M95.09337449550596,6.486486486486487L95.09337449550596,12.972972972972974L157.27988322992437,12.972972972972974"
        />
        <line
          className="branch-tracer"
          x1={157.27988322992437}
          x2={416.1904296875}
          y1={12.972972972972974}
          y2={12.972972972972974}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={12.972972972972974}
        >
          CONGERA
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M99.75285963960134,32.432432432432435L99.75285963960134,25.945945945945947L176.67246130379888,25.945945945945947"
        />
        <line
          className="branch-tracer"
          x1={176.67246130379888}
          x2={441.39453125}
          y1={25.945945945945947}
          y2={25.945945945945947}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={25.945945945945947}
        >
          EELB
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M99.75285963960134,32.432432432432435L99.75285963960134,38.91891891891892L158.90738963167436,38.91891891891892"
        />
        <line
          className="branch-tracer"
          x1={158.90738963167436}
          x2={416.1904296875}
          y1={38.91891891891892}
          y2={38.91891891891892}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={38.91891891891892}
        >
          CONGERB
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M84.73630326298822,61.62162162162162L84.73630326298822,51.891891891891895L216.40434449385745,51.891891891891895"
        />
        <line
          className="branch-tracer"
          x1={216.40434449385745}
          x2={407.7890625}
          y1={51.891891891891895}
          y2={51.891891891891895}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={51.891891891891895}
        >
          CAVEFISH
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M84.73630326298822,61.62162162162162L84.73630326298822,71.35135135135135L149.12571124540764,71.35135135135135"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M125.30018524138532,275.90090090090087L125.30018524138532,219.59459459459458L171.1955738413358,219.59459459459458"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M125.30018524138532,275.90090090090087L125.30018524138532,285.4054054054054L334.6707827856886,285.4054054054054"
        />
        <line
          className="branch-tracer"
          x1={334.6707827856886}
          x2={407.7890625}
          y1={285.4054054054054}
          y2={285.4054054054054}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={285.4054054054054}
        >
          LAMPFISH
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M125.30018524138532,275.90090090090087L125.30018524138532,322.7027027027027L166.36385035158438,322.7027027027027"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M119.6186552699309,413.1081081081081L119.6186552699309,382.7027027027027L159.1187465168523,382.7027027027027"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M119.6186552699309,413.1081081081081L119.6186552699309,443.51351351351354L134.47552626506288,443.51351351351354"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M149.12571124540764,71.35135135135135L149.12571124540764,64.86486486486487L248.52621209991258,64.86486486486487"
        />
        <line
          className="branch-tracer"
          x1={248.52621209991258}
          x2={407.7890625}
          y1={64.86486486486487}
          y2={64.86486486486487}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={64.86486486486487}
        >
          GOLDFISH
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M149.12571124540764,71.35135135135135L149.12571124540764,77.83783783783784L263.02576151015813,77.83783783783784"
        />
        <line
          className="branch-tracer"
          x1={263.02576151015813}
          x2={399.3876953125}
          y1={77.83783783783784}
          y2={77.83783783783784}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={77.83783783783784}
        >
          ZEBRAFISH
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M171.1955738413358,219.59459459459458L171.1955738413358,181.35135135135135L214.39878951986236,181.35135135135135"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M171.1955738413358,219.59459459459458L171.1955738413358,257.83783783783787L189.26746331224766,257.83783783783787"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M166.36385035158438,322.7027027027027L166.36385035158438,304.86486486486484L248.7647184192363,304.86486486486484"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M166.36385035158438,322.7027027027027L166.36385035158438,340.5405405405405L250.1919612529862,340.5405405405405"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M159.1187465168523,382.7027027027027L159.1187465168523,376.2162162162162L288.105416214076,376.2162162162162"
        />
        <line
          className="branch-tracer"
          x1={288.105416214076}
          x2={390.986328125}
          y1={376.2162162162162}
          y2={376.2162162162162}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={376.2162162162162}
        >
          CLAWEDFROG
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M159.1187465168523,382.7027027027027L159.1187465168523,389.1891891891892L246.5828380879933,389.1891891891892"
        />
        <line
          className="branch-tracer"
          x1={246.5828380879933}
          x2={390.986328125}
          y1={389.1891891891892}
          y2={389.1891891891892}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={389.1891891891892}
        >
          SALAMANDER
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M134.47552626506288,443.51351351351354L134.47552626506288,416.7567567567567L138.57859397386937,416.7567567567567"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M134.47552626506288,443.51351351351354L134.47552626506288,470.27027027027026L241.67346137799697,470.27027027027026"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M214.39878951986236,181.35135135135135L214.39878951986236,148.64864864864862L235.81064324950458,148.64864864864862"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M214.39878951986236,181.35135135135135L214.39878951986236,214.05405405405406L266.60598366460863,214.05405405405406"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M189.26746331224766,257.83783783783787L189.26746331224766,243.24324324324326L205.58865217485553,243.24324324324326"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M189.26746331224766,257.83783783783787L189.26746331224766,272.4324324324324L262.9740900064613,272.4324324324324"
        />
        <line
          className="branch-tracer"
          x1={262.9740900064613}
          x2={390.986328125}
          y1={272.4324324324324}
          y2={272.4324324324324}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={272.4324324324324}
        >
          THORNYHEAD
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M248.7647184192363,304.86486486486484L248.7647184192363,298.3783783783784L304.13905461825806,298.3783783783784"
        />
        <line
          className="branch-tracer"
          x1={304.13905461825806}
          x2={399.3876953125}
          y1={298.3783783783784}
          y2={298.3783783783784}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={298.3783783783784}
        >
          SCABBARDA
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M248.7647184192363,304.86486486486484L248.7647184192363,311.35135135135135L354.4475399491959,311.35135135135135"
        />
        <line
          className="branch-tracer"
          x1={354.4475399491959}
          x2={399.3876953125}
          y1={311.35135135135135}
          y2={311.35135135135135}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={311.35135135135135}
        >
          SCABBARDB
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M250.1919612529862,340.5405405405405L250.1919612529862,330.8108108108108L286.2866960557078,330.8108108108108"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M250.1919612529862,340.5405405405405L250.1919612529862,350.27027027027026L366.11712576149273,350.27027027027026"
        />
        <line
          className="branch-tracer"
          x1={366.11712576149273}
          x2={407.7890625}
          y1={350.27027027027026}
          y2={350.27027027027026}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={350.27027027027026}
        >
          LOOSEJAW
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M138.57859397386937,416.7567567567567L138.57859397386937,402.16216216216213L363.8502939750194,402.16216216216213"
        />
        <line
          className="branch-tracer"
          x1={363.8502939750194}
          x2={399.3876953125}
          y1={402.16216216216213}
          y2={402.16216216216213}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={402.16216216216213}
        >
          CHAMELEON
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M138.57859397386937,416.7567567567567L138.57859397386937,431.35135135135135L218.08206275230714,431.35135135135135"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M241.67346137799697,470.27027027027026L241.67346137799697,460.5405405405405L272.2626996371127,460.5405405405405"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M241.67346137799697,470.27027027027026L241.67346137799697,480L290.2963463567009,480"
        />
        <line
          className="branch-tracer"
          x1={290.2963463567009}
          x2={407.7890625}
          y1={480}
          y2={480}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={480}
        >
          ELEPHANT
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M235.81064324950458,148.64864864864862L235.81064324950458,118.91891891891892L238.67797381057872,118.91891891891892"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M235.81064324950458,148.64864864864862L235.81064324950458,178.37837837837836L262.6024638810034,178.37837837837836"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M266.60598366460863,214.05405405405406L266.60598366460863,207.56756756756758L270.1882493248552,207.56756756756758"
        />
        <line
          className="branch-tracer"
          x1={270.1882493248552}
          x2={441.39453125}
          y1={207.56756756756758}
          y2={207.56756756756758}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={207.56756756756758}
        >
          MVIO
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M266.60598366460863,214.05405405405406L266.60598366460863,220.54054054054055L278.22418990260803,220.54054054054055"
        />
        <line
          className="branch-tracer"
          x1={278.22418990260803}
          x2={441.39453125}
          y1={220.54054054054055}
          y2={220.54054054054055}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={220.54054054054055}
        >
          MBER
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M205.58865217485553,243.24324324324326L205.58865217485553,233.51351351351352L298.26309966679185,233.51351351351352"
        />
        <line
          className="branch-tracer"
          x1={298.26309966679185}
          x2={374.18359375}
          y1={233.51351351351352}
          y2={233.51351351351352}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={233.51351351351352}
        >
          BFNKILLIFISH
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M205.58865217485553,243.24324324324326L205.58865217485553,252.97297297297294L264.3149217379837,252.97297297297294"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M286.2866960557078,330.8108108108108L286.2866960557078,324.3243243243243L379.18359375,324.3243243243243"
        />
        <line
          className="branch-tracer"
          x1={379.18359375}
          x2={399.3876953125}
          y1={324.3243243243243}
          y2={324.3243243243243}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={324.3243243243243}
        >
          VIPERFISH
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M286.2866960557078,330.8108108108108L286.2866960557078,337.2972972972973L318.37324020443356,337.2972972972973"
        />
        <line
          className="branch-tracer"
          x1={318.37324020443356}
          x2={382.5849609375}
          y1={337.2972972972973}
          y2={337.2972972972973}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={337.2972972972973}
        >
          BLACKDRAGON
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M218.08206275230714,431.35135135135135L218.08206275230714,421.6216216216216L242.06785799660938,421.6216216216216"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M218.08206275230714,431.35135135135135L218.08206275230714,441.0810810810811L247.03328515129382,441.0810810810811"
        />
        <line
          className="branch-tracer"
          x1={247.03328515129382}
          x2={390.986328125}
          y1={441.0810810810811}
          y2={441.0810810810811}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={441.0810810810811}
        >
          ZEBRAFINCH
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M272.2626996371127,460.5405405405405L272.2626996371127,454.05405405405406L321.1810171680266,454.05405405405406"
        />
        <line
          className="branch-tracer"
          x1={321.1810171680266}
          x2={424.591796875}
          y1={454.05405405405406}
          y2={454.05405405405406}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={454.05405405405406}
        >
          BOVINE
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M272.2626996371127,460.5405405405405L272.2626996371127,467.02702702702703L318.22698357532556,467.02702702702703"
        />
        <line
          className="branch-tracer"
          x1={318.22698357532556}
          x2={416.1904296875}
          y1={467.02702702702703}
          y2={467.02702702702703}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={467.02702702702703}
        >
          DOLPHIN
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M238.67797381057872,118.91891891891892L238.67797381057872,97.2972972972973L254.1476046150871,97.2972972972973"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M238.67797381057872,118.91891891891892L238.67797381057872,116.75675675675676L256.48654296321644,116.75675675675676"
        />
        <line
          className="branch-tracer"
          x1={256.48654296321644}
          x2={441.39453125}
          y1={116.75675675675676}
          y2={116.75675675675676}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={116.75675675675676}
        >
          SPUN
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M238.67797381057872,118.91891891891892L238.67797381057872,142.7027027027027L252.391941206993,142.7027027027027"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M262.6024638810034,178.37837837837836L262.6024638810034,168.64864864864865L286.3357401948099,168.64864864864865"
        />
        <line
          className="branch-tracer"
          x1={286.3357401948099}
          x2={441.39453125}
          y1={168.64864864864865}
          y2={168.64864864864865}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={168.64864864864865}
        >
          NAUR
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M262.6024638810034,178.37837837837836L262.6024638810034,188.1081081081081L279.5866244096873,188.1081081081081"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M264.3149217379837,252.97297297297294L264.3149217379837,246.48648648648648L272.84422300075136,246.48648648648648"
        />
        <line
          className="branch-tracer"
          x1={272.84422300075136}
          x2={441.39453125}
          y1={246.48648648648648}
          y2={246.48648648648648}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={246.48648648648648}
        >
          ONIL
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M264.3149217379837,252.97297297297294L264.3149217379837,259.4594594594595L288.95025989598884,259.4594594594595"
        />
        <line
          className="branch-tracer"
          x1={288.95025989598884}
          x2={441.39453125}
          y1={259.4594594594595}
          y2={259.4594594594595}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={259.4594594594595}
        >
          XCAU
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M242.06785799660938,421.6216216216216L242.06785799660938,415.13513513513516L286.12263173323544,415.13513513513516"
        />
        <line
          className="branch-tracer"
          x1={286.12263173323544}
          x2={424.591796875}
          y1={415.13513513513516}
          y2={415.13513513513516}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={415.13513513513516}
        >
          PIGEON
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M242.06785799660938,421.6216216216216L242.06785799660938,428.1081081081081L292.49369894611294,428.1081081081081"
        />
        <line
          className="branch-tracer"
          x1={292.49369894611294}
          x2={416.1904296875}
          y1={428.1081081081081}
          y2={428.1081081081081}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={428.1081081081081}
        >
          CHICKEN
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M254.1476046150871,97.2972972972973L254.1476046150871,90.81081081081082L256.51602783255754,90.81081081081082"
        />
        <line
          className="branch-tracer"
          x1={256.51602783255754}
          x2={441.39453125}
          y1={90.81081081081082}
          y2={90.81081081081082}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={90.81081081081082}
        >
          NSAM
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M254.1476046150871,97.2972972972973L254.1476046150871,103.78378378378379L258.25359161788776,103.78378378378379"
        />
        <line
          className="branch-tracer"
          x1={258.25359161788776}
          x2={441.39453125}
          y1={103.78378378378379}
          y2={103.78378378378379}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={103.78378378378379}
        >
          NARG
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M252.391941206993,142.7027027027027L252.391941206993,129.72972972972974L260.50933008718323,129.72972972972974"
        />
        <line
          className="branch-tracer"
          x1={260.50933008718323}
          x2={441.39453125}
          y1={129.72972972972974}
          y2={129.72972972972974}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={129.72972972972974}
        >
          SMIC
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M252.391941206993,142.7027027027027L252.391941206993,142.7027027027027L256.8578771592749,142.7027027027027"
        />
        <line
          className="branch-tracer"
          x1={256.8578771592749}
          x2={441.39453125}
          y1={142.7027027027027}
          y2={142.7027027027027}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={142.7027027027027}
        >
          SDIA
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M252.391941206993,142.7027027027027L252.391941206993,155.67567567567568L266.0755479458679,155.67567567567568"
        />
        <line
          className="branch-tracer"
          x1={266.0755479458679}
          x2={441.39453125}
          y1={155.67567567567568}
          y2={155.67567567567568}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={155.67567567567568}
        >
          SXAN
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M279.5866244096873,188.1081081081081L279.5866244096873,181.62162162162164L286.5567307501686,181.62162162162164"
        />
        <line
          className="branch-tracer"
          x1={286.5567307501686}
          x2={441.39453125}
          y1={181.62162162162164}
          y2={181.62162162162164}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={181.62162162162164}
        >
          SSPI
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M279.5866244096873,188.1081081081081L279.5866244096873,194.5945945945946L283.57204457052876,194.5945945945946"
        />
        <line
          className="branch-tracer"
          x1={283.57204457052876}
          x2={441.39453125}
          y1={194.5945945945946}
          y2={194.5945945945946}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={194.5945945945946}
        >
          STIE
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`tree with internal node labels renders correctly 1`] = `
<div>
  <h1>
    Internal Node Labels
  </h1>
  <svg
    height={500}
    style={
      Object {
        "borderColor": "lightgrey",
        "borderStyle": "solid",
        "borderWidth": 1,
      }
    }
    width={500}
  >
    <g
      transform="translate(10, 10)"
    >
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,411.4285714285714L0,308.5714285714286L75.79931640625,308.5714285714286"
        />
        <line
          className="branch-tracer"
          x1={75.79931640625}
          x2={432.9931640625}
          y1={308.5714285714286}
          y2={308.5714285714286}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={308.5714285714286}
        >
          Node2
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,411.4285714285714L0,445.7142857142857L75.79931640625,445.7142857142857"
        />
        <line
          className="branch-tracer"
          x1={75.79931640625}
          x2={449.7958984375}
          y1={445.7142857142857}
          y2={445.7142857142857}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={445.7142857142857}
        >
          MAR
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,411.4285714285714L0,480L75.79931640625,480"
        />
        <line
          className="branch-tracer"
          x1={75.79931640625}
          x2={449.7958984375}
          y1={480}
          y2={480}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={480}
        >
          BUS
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M75.79931640625,308.5714285714286L75.79931640625,240L151.5986328125,240"
        />
        <line
          className="branch-tracer"
          x1={151.5986328125}
          x2={432.9931640625}
          y1={240}
          y2={240}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={240}
        >
          Node3
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M75.79931640625,308.5714285714286L75.79931640625,377.1428571428571L151.5986328125,377.1428571428571"
        />
        <line
          className="branch-tracer"
          x1={151.5986328125}
          x2={424.591796875}
          y1={377.1428571428571}
          y2={377.1428571428571}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={377.1428571428571}
        >
          Node12
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M151.5986328125,240L151.5986328125,171.42857142857144L227.39794921875,171.42857142857144"
        />
        <line
          className="branch-tracer"
          x1={227.39794921875}
          x2={432.9931640625}
          y1={171.42857142857144}
          y2={171.42857142857144}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={171.42857142857144}
        >
          Node4
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M151.5986328125,240L151.5986328125,274.2857142857143L227.39794921875,274.2857142857143"
        />
        <line
          className="branch-tracer"
          x1={227.39794921875}
          x2={449.7958984375}
          y1={274.2857142857143}
          y2={274.2857142857143}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={274.2857142857143}
        >
          GIB
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M151.5986328125,377.1428571428571L151.5986328125,342.8571428571429L227.39794921875,342.8571428571429"
        />
        <line
          className="branch-tracer"
          x1={227.39794921875}
          x2={449.7958984375}
          y1={342.8571428571429}
          y2={342.8571428571429}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={342.8571428571429}
        >
          MAC
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M151.5986328125,377.1428571428571L151.5986328125,411.4285714285714L227.39794921875,411.4285714285714"
        />
        <line
          className="branch-tracer"
          x1={227.39794921875}
          x2={449.7958984375}
          y1={411.4285714285714}
          y2={411.4285714285714}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={411.4285714285714}
        >
          BAB
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M227.39794921875,171.42857142857144L227.39794921875,102.85714285714285L303.197265625,102.85714285714285"
        />
        <line
          className="branch-tracer"
          x1={303.197265625}
          x2={432.9931640625}
          y1={102.85714285714285}
          y2={102.85714285714285}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={102.85714285714285}
        >
          Node5
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M227.39794921875,171.42857142857144L227.39794921875,205.7142857142857L303.197265625,205.7142857142857"
        />
        <line
          className="branch-tracer"
          x1={303.197265625}
          x2={449.7958984375}
          y1={205.7142857142857}
          y2={205.7142857142857}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={205.7142857142857}
        >
          PON
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M303.197265625,102.85714285714285L303.197265625,34.285714285714285L378.99658203125,34.285714285714285"
        />
        <line
          className="branch-tracer"
          x1={378.99658203125}
          x2={432.9931640625}
          y1={34.285714285714285}
          y2={34.285714285714285}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={34.285714285714285}
        >
          Node6
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M303.197265625,102.85714285714285L303.197265625,137.14285714285714L378.99658203125,137.14285714285714"
        />
        <line
          className="branch-tracer"
          x1={378.99658203125}
          x2={449.7958984375}
          y1={137.14285714285714}
          y2={137.14285714285714}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={137.14285714285714}
        >
          GOR
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M378.99658203125,34.285714285714285L378.99658203125,0L454.7958984375,0"
        />
        <line
          className="branch-tracer"
          x1={454.7958984375}
          x2={449.7958984375}
          y1={0}
          y2={0}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={0}
        >
          HUM
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M378.99658203125,34.285714285714285L378.99658203125,68.57142857142857L454.7958984375,68.57142857142857"
        />
        <line
          className="branch-tracer"
          x1={454.7958984375}
          x2={449.7958984375}
          y1={68.57142857142857}
          y2={68.57142857142857}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={68.57142857142857}
        >
          PAN
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`tree without branches renders correctly 1`] = `
<div>
  <h1>
    No Branch Lengths
  </h1>
  <svg
    height={500}
    style={
      Object {
        "borderColor": "lightgrey",
        "borderStyle": "solid",
        "borderWidth": 1,
      }
    }
    width={500}
  >
    <g
      transform="translate(10, 10)"
    >
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,385.625L0,256.875L75.79931640625,256.875"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,385.625L0,420L75.79931640625,420"
        />
        <line
          className="branch-tracer"
          x1={75.79931640625}
          x2={449.7958984375}
          y1={420}
          y2={420}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={420}
        >
          MAR
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,385.625L0,480L75.79931640625,480"
        />
        <line
          className="branch-tracer"
          x1={75.79931640625}
          x2={449.7958984375}
          y1={480}
          y2={480}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={480}
        >
          BUS
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M75.79931640625,256.875L75.79931640625,183.75L151.5986328125,183.75"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M75.79931640625,256.875L75.79931640625,330L151.5986328125,330"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M151.5986328125,183.75L151.5986328125,127.5L227.39794921875,127.5"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M151.5986328125,183.75L151.5986328125,240L227.39794921875,240"
        />
        <line
          className="branch-tracer"
          x1={227.39794921875}
          x2={449.7958984375}
          y1={240}
          y2={240}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={240}
        >
          GIB
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M151.5986328125,330L151.5986328125,300L227.39794921875,300"
        />
        <line
          className="branch-tracer"
          x1={227.39794921875}
          x2={449.7958984375}
          y1={300}
          y2={300}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={300}
        >
          MAC
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M151.5986328125,330L151.5986328125,360L227.39794921875,360"
        />
        <line
          className="branch-tracer"
          x1={227.39794921875}
          x2={449.7958984375}
          y1={360}
          y2={360}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={360}
        >
          BAB
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M227.39794921875,127.5L227.39794921875,75L303.197265625,75"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M227.39794921875,127.5L227.39794921875,180L303.197265625,180"
        />
        <line
          className="branch-tracer"
          x1={303.197265625}
          x2={449.7958984375}
          y1={180}
          y2={180}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={180}
        >
          PON
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M303.197265625,75L303.197265625,30L378.99658203125,30"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M303.197265625,75L303.197265625,120L378.99658203125,120"
        />
        <line
          className="branch-tracer"
          x1={378.99658203125}
          x2={449.7958984375}
          y1={120}
          y2={120}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={120}
        >
          GOR
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M378.99658203125,30L378.99658203125,0L454.7958984375,0"
        />
        <line
          className="branch-tracer"
          x1={454.7958984375}
          x2={449.7958984375}
          y1={0}
          y2={0}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={0}
        >
          HUM
        </text>
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M378.99658203125,30L378.99658203125,60L454.7958984375,60"
        />
        <line
          className="branch-tracer"
          x1={454.7958984375}
          x2={449.7958984375}
          y1={60}
          y2={60}
        />
        <text
          alignmentBaseline="middle"
          className="label"
          textAnchor="end"
          x={480}
          y={60}
        >
          PAN
        </text>
      </g>
    </g>
  </svg>
</div>
`;

exports[`vanilla renders correctly 1`] = `
<div>
  <h1>
    Vanilla
  </h1>
  <svg
    height={500}
    style={
      Object {
        "borderColor": "lightgrey",
        "borderStyle": "solid",
        "borderWidth": 1,
      }
    }
    width={500}
  >
    <g
      transform="translate(0, 1)"
    >
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,199.3370870870871L0,20.18918918918919L36.48697963180813,20.18918918918919"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,199.3370870870871L0,175.08980855855856L85.64441275922174,175.08980855855856"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M0,199.3370870870871L0,402.73226351351354L113.5667586427775,402.73226351351354"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M36.48697963180813,20.18918918918919L36.48697963180813,6.72972972972973L125.39225860890238,6.72972972972973"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M36.48697963180813,20.18918918918919L36.48697963180813,33.64864864864865L131.53636033283854,33.64864864864865"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M85.64441275922174,175.08980855855856L85.64441275922174,63.93243243243243L111.73519194880544,63.93243243243243"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M85.64441275922174,175.08980855855856L85.64441275922174,286.24718468468467L165.2236374498802,286.24718468468467"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M113.5667586427775,402.73226351351354L113.5667586427775,376.8648648648649L328.4055284212342,376.8648648648649"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M113.5667586427775,402.73226351351354L113.5667586427775,428.59966216216213L157.731844470039,428.59966216216213"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M125.39225860890238,6.72972972972973L125.39225860890238,0L183.24020238850463,0"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M125.39225860890238,6.72972972972973L125.39225860890238,13.45945945945946L207.39278521319775,13.45945945945946"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M131.53636033283854,33.64864864864865L131.53636033283854,26.91891891891892L232.9642740559617,26.91891891891892"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M131.53636033283854,33.64864864864865L131.53636033283854,40.37837837837838L209.53885169468037,40.37837837837838"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M111.73519194880544,63.93243243243243L111.73519194880544,53.83783783783784L285.3556272750229,53.83783783783784"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M111.73519194880544,63.93243243243243L111.73519194880544,74.02702702702703L196.6405109601444,74.02702702702703"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M165.2236374498802,286.24718468468467L165.2236374498802,227.82939189189187L225.74232728302977,227.82939189189187"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M165.2236374498802,286.24718468468467L165.2236374498802,296.1081081081081L441.3044080782946,296.1081081081081"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M165.2236374498802,286.24718468468467L165.2236374498802,334.804054054054L219.37110820948376,334.804054054054"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M157.731844470039,428.59966216216213L157.731844470039,397.054054054054L209.81755162877784,397.054054054054"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M157.731844470039,428.59966216216213L157.731844470039,460.14527027027026L177.32244812485757,460.14527027027026"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M196.6405109601444,74.02702702702703L196.6405109601444,67.2972972972973L327.7122430879337,67.2972972972973"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M196.6405109601444,74.02702702702703L196.6405109601444,80.75675675675676L346.831674478477,80.75675675675676"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M225.74232728302977,227.82939189189187L225.74232728302977,188.15202702702703L282.71105745837974,188.15202702702703"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M225.74232728302977,227.82939189189187L225.74232728302977,267.5067567567568L249.57232648234486,267.5067567567568"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M219.37110820948376,334.804054054054L219.37110820948376,316.2972972972973L328.0267428754442,316.2972972972973"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M219.37110820948376,334.804054054054L219.37110820948376,353.3108108108108L329.90873731992286,353.3108108108108"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M209.81755162877784,397.054054054054L209.81755162877784,390.3243243243243L379.90227024962894,390.3243243243243"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M209.81755162877784,397.054054054054L209.81755162877784,403.7837837837838L325.14966648394625,403.7837837837838"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M177.32244812485757,460.14527027027026L177.32244812485757,432.3851351351351L182.7328453261559,432.3851351351351"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M177.32244812485757,460.14527027027026L177.32244812485757,487.9054054054054L318.6760521307457,487.9054054054054"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M282.71105745837974,188.15202702702703L282.71105745837974,154.22297297297294L310.94520851682364,154.22297297297294"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M282.71105745837974,188.15202702702703L282.71105745837974,222.08108108108107L351.5526357930783,222.08108108108107"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M249.57232648234486,267.5067567567568L249.57232648234486,252.3648648648649L271.0938125535073,252.3648648648649"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M249.57232648234486,267.5067567567568L249.57232648234486,282.64864864864865L346.76353927359406,282.64864864864865"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M328.0267428754442,316.2972972972973L328.0267428754442,309.56756756756755L401.04458583034096,309.56756756756755"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M328.0267428754442,316.2972972972973L328.0267428754442,323.02702702702703L467.3824840940866,323.02702702702703"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M329.90873731992286,353.3108108108108L329.90873731992286,343.2162162162162L377.5040650156133,343.2162162162162"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M329.90873731992286,353.3108108108108L329.90873731992286,363.4054054054054L482.7702619471425,363.4054054054054"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M182.7328453261559,432.3851351351351L182.7328453261559,417.2432432432432L479.781166659481,417.2432432432432"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M182.7328453261559,432.3851351351351L182.7328453261559,447.52702702702703L287.5679042380867,447.52702702702703"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M318.6760521307457,487.9054054054054L318.6760521307457,477.8108108108108L359.01170847678935,477.8108108108108"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M318.6760521307457,487.9054054054054L318.6760521307457,498L382.7912799255979,498"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M310.94520851682364,154.22297297297294L310.94520851682364,123.37837837837837L314.7261349708366,123.37837837837837"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M310.94520851682364,154.22297297297294L310.94520851682364,185.06756756756755L346.2735047209613,185.06756756756755"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M351.5526357930783,222.08108108108107L351.5526357930783,215.35135135135135L356.2762917203023,215.35135135135135"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M351.5526357930783,222.08108108108107L351.5526357930783,228.81081081081084L366.8726633859116,228.81081081081084"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M271.0938125535073,252.3648648648649L271.0938125535073,242.2702702702703L393.2964197067029,242.2702702702703"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M271.0938125535073,252.3648648648649L271.0938125535073,262.4594594594594L348.53159009860735,262.4594594594594"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M377.5040650156133,343.2162162162162L377.5040650156133,336.48648648648646L500,336.48648648648646"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M377.5040650156133,343.2162162162162L377.5040650156133,349.945945945946L419.8141025246211,349.945945945946"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M287.5679042380867,447.52702702702703L287.5679042380867,437.43243243243245L319.1961123668861,437.43243243243245"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M287.5679042380867,447.52702702702703L287.5679042380867,457.62162162162167L325.743636094875,457.62162162162167"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M359.01170847678935,477.8108108108108L359.01170847678935,471.0810810810811L423.51650026792146,471.0810810810811"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M359.01170847678935,477.8108108108108L359.01170847678935,484.5405405405406L419.6212452497829,484.5405405405406"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M314.7261349708366,123.37837837837837L314.7261349708366,100.94594594594595L335.1247374677416,100.94594594594595"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M314.7261349708366,123.37837837837837L314.7261349708366,121.13513513513514L338.20891408651096,121.13513513513514"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M314.7261349708366,123.37837837837837L314.7261349708366,148.05405405405406L332.8096802803629,148.05405405405406"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M346.2735047209613,185.06756756756755L346.2735047209613,174.972972972973L377.56873571855306,174.972972972973"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M346.2735047209613,185.06756756756755L346.2735047209613,195.16216216216216L368.6692001157913,195.16216216216216"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M348.53159009860735,262.4594594594594L348.53159009860735,255.7297297297297L359.77851824021775,255.7297297297297"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M348.53159009860735,262.4594594594594L348.53159009860735,269.1891891891892L381.016300096698,269.1891891891892"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M319.1961123668861,437.43243243243245L319.1961123668861,430.7027027027027L377.2877261164934,430.7027027027027"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M319.1961123668861,437.43243243243245L319.1961123668861,444.16216216216213L385.6887583840947,444.16216216216213"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M335.1247374677416,100.94594594594595L335.1247374677416,94.21621621621622L338.2477934972068,94.21621621621622"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M335.1247374677416,100.94594594594595L335.1247374677416,107.67567567567568L340.53898411564353,107.67567567567568"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M332.8096802803629,148.05405405405406L332.8096802803629,134.5945945945946L343.5134515062115,134.5945945945946"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M332.8096802803629,148.05405405405406L332.8096802803629,148.05405405405406L338.6985636944833,148.05405405405406"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M332.8096802803629,148.05405405405406L332.8096802803629,161.51351351351352L350.8531913452122,161.51351351351352"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M368.6692001157913,195.16216216216216L368.6692001157913,188.43243243243245L377.86013882644227,188.43243243243245"
        />
      </g>
      <g
        className="node"
      >
        <path
          className="branch"
          d="M368.6692001157913,195.16216216216216L368.6692001157913,201.8918918918919L373.92446461896634,201.8918918918919"
        />
      </g>
    </g>
  </svg>
</div>
`;
